# MTS-True-Tech-Hack-2026

./: .dockerignore  .gitignore  Makefile  QWEN.md  README.md  docker-compose.gpu.yml  docker-compose.yml
proto/api/agent/v1/: agent.proto
proto/api/llm/v1/: llm.proto
proto/api/lua_checker/v1/: checker.proto
proto/api/lua_validator/v1/: validator.proto
services/agent/: Dockerfile
services/backend/: Dockerfile  Makefile  go.mod  go.sum
services/backend/cmd/server/: main.go
services/backend/internal/client/: agent_client.go
services/backend/internal/config/: config.go
services/backend/internal/handler/: handlers.go  handlers_test.go
services/backend/internal/session/: store.go
services/frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt  test_transport.py  transport.py
services/llm/: Dockerfile  Makefile  README.md  checker_client.py  context_normalizer.py  graph.py  llm_pb2_grpc.py  lua_context_extractor.py  main.py  pipeline.py  prompts.py  pyproject.toml  requirements.txt  spec_logic.py  startup.sh  state.py  test_clarification_flow.py  test_clarifier_logic.py  test_prompts_contract.py  test_runtime_pipeline.py  test_spec_logic.py  validator_client.py
services/lua-checker/: Dockerfile  Makefile  go.mod  go.sum
services/lua-checker/cmd/server/: main.go
services/lua-checker/internal/config/: config.go
services/lua-checker/internal/handler/: server.go
services/lua-checker/internal/service/: checker.go
services/lua-validator/: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  validator_pb2.py  validator_pb2_grpc.py
services/tests/: Dockerfile  Makefile  conftest.py  pyproject.toml  requirements.txt  test_local_script.py  testcases.json
tests/: Dockerfile  conftest.py  requirements.txt  test_local_script.py  testcases.json
tests/reports/: report.html
tests/testcases/: case_01_last_email.json  case_02_counter.json  case_03_clear_fields.json  case_04_filter_discount.json  case_05_square_number.json  case_06_sum_array.json  case_07_string_concat.json  case_08_check_even.json  case_09_extract_keys.json  case_10_to_uppercase.json  case_11_find_max.json  case_12_merge_arrays.json  case_13_timestamp_to_date.json  case_14_unique_elements.json  case_15_count_words.json  case_16_deep_nested_path.json  case_17_mark_as_array.json  case_18_init_variables_priority.json  case_19_recursive_factorial.json  case_20_transform_iso8601_to_unix.json  case_21_safe_division.json  case_22_merge_objects.json  case_23_filter_by_nested_field.json  case_24_group_by.json  case_25_validate_email.json
