# Зависимости: pyproject.toml — источник правды для uv.
# Обновить requirements.txt и uv.lock:
#   uv lock && uv export --format requirements-txt --no-dev --no-hashes -o requirements.txt
[project]
name = "lua-validator"
version = "0.1.0"
description = "gRPC service that validates Lua code by actually running it"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpcio-reflection>=1.68.0",
]
