# Обновить requirements.txt и uv.lock:
#   uv lock && uv export --format requirements-txt --no-dev --no-hashes -o requirements.txt
[project]
name = "task-repo-tests"
version = "0.1.0"
description = "Pytest integration tests (agent HTTP + validator HTTP)"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "pytest-html>=4.1.0",
]
